Refactor non-AMR extraction notebook to use dynamic counts for pre-training and fine-tuning; update file paths for output data.

--- a/notebooks/04.amr_to_binary.ipynb
+++ b/notebooks/04.amr_to_binary.ipynb
@@ -57,6 +57,29 @@
     "    .alias(\"amr\")\n",
     ").select([\"sequence\", \"amr\"]).write_parquet(\"../temp/data/processed/card_amr_binary.parquet\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed4b694a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Column counts\n",
+    "df.select(amr_columns).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "543406e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What should be the non-AMR column count?\n",
+    "# Should be total distinct counts, which is basically the number of rows with at least one AMR gene\n",
+    "df.filter(pl.any_horizontal(pl.col(amr_columns) == 1)).height"
+   ]
   }
  ],
  "metadata": {
