--- a/notebooks/00.extract.non_amr.ipynb
+++ b/notebooks/00.extract.non_amr.ipynb
@@ -15,6 +15,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "65b94cec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_training_count = 200000\n",
+    "fine_tuning_count = 6385"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "970e57de",
    "metadata": {},
    "outputs": [],
@@ -93,7 +104,7 @@
    "outputs": [],
    "source": [
     "# Get top 20000 protein coding genes\n",
-    "limited = protein_coding_genes.limit(20000)"
+    "limited = protein_coding_genes.limit(pre_training_count + fine_tuning_count)"
    ]
   },
   {
@@ -147,7 +158,7 @@
     ").with_columns(\n",
     "    pl.lit(1).alias(\"non_amr\")\n",
     ").sink_parquet(\n",
-    "    Path(\"../temp/data/processed/non_amr_genes_10000.parquet\"), compression=\"zstd\"\n",
+    "    Path(\"../temp/data/processed/non_amr_genes.parquet\"), compression=\"zstd\"\n",
     ")"
    ]
   },
@@ -158,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_amr = pl.scan_parquet(\"../temp/data/processed/non_amr_genes_10000.parquet\")"
+    "non_amr = pl.scan_parquet(\"../temp/data/processed/non_amr_genes.parquet\")"
    ]
   },
   {
@@ -211,6 +222,97 @@
     "        fasta_path.unlink()\n",
     "    print(\"\\nDownload interrupted. Last file removed. You can rerun the cell to resume.\")\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dfe71bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "test_size = fine_tuning_count\n",
+    "train_size = pre_training_count\n",
+    "all_indices = list(range(pre_training_count + fine_tuning_count))\n",
+    "train_indices, test_indices = train_test_split(\n",
+    "    all_indices, test_size=test_size, train_size=train_size, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54091f95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_amr_with_split = non_amr.with_columns(\n",
+    "    pl.when(pl.arange(0, pre_training_count + fine_tuning_count).is_in(train_indices))\n",
+    "    .then(pl.lit(1).alias(\"is_pre_training\"))\n",
+    "    .otherwise(pl.lit(0).alias(\"is_pre_training\"))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc93461",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# then sink to parquet\n",
+    "non_amr_with_split.filter(pl.col(\"is_pre_training\") == 1).select(\n",
+    "    [\n",
+    "        \"GeneID\",\n",
+    "        \"#tax_id\",\n",
+    "        \"status\",\n",
+    "        \"genomic_nucleotide_accession.version\",\n",
+    "        \"start_position_on_the_genomic_accession\",\n",
+    "        \"end_position_on_the_genomic_accession\",\n",
+    "        \"orientation\",\n",
+    "        \"Symbol\",\n",
+    "        \"non_amr\",\n",
+    "    ]\n",
+    ").sink_parquet(Path(\"../temp/data/processed/pre_training.parquet\"), compression=\"zstd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a41e7648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_amr_with_split.filter(pl.col(\"is_pre_training\") != 1).select(\n",
+    "    [\n",
+    "        \"GeneID\",\n",
+    "        \"#tax_id\",\n",
+    "        \"status\",\n",
+    "        \"genomic_nucleotide_accession.version\",\n",
+    "        \"start_position_on_the_genomic_accession\",\n",
+    "        \"end_position_on_the_genomic_accession\",\n",
+    "        \"orientation\",\n",
+    "        \"Symbol\",\n",
+    "        \"non_amr\",\n",
+    "    ]\n",
+    ").sink_parquet(Path(\"../temp/data/processed/fine_tuning.parquet\"), compression=\"zstd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0859c097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load and check counts\n",
+    "pre_training = pl.scan_parquet(\"../temp/data/processed/pre_training.parquet\")\n",
+    "fine_tuning = pl.scan_parquet(\"../temp/data/processed/fine_tuning.parquet\")\n",
+    "\n",
+    "print(pre_training.select(pl.len()).collect().item())\n",
+    "print(fine_tuning.select(pl.len()).collect().item())"
    ]
   }
  ],
