Add notebook for extracting and processing CARD data; includes data cleaning and one-hot encoding of drug classes

--- a/notebooks/00.extract.non_amr.ipynb
+++ b/notebooks/00.extract.non_amr.ipynb
@@ -15,6 +15,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d8ea4c24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set polars random seed for reproducibility\n",
+    "pl.set_random_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "65b94cec",
    "metadata": {},
    "outputs": [],
@@ -99,6 +110,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a353beed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of protein accessions\n",
+    "protein_coding_genes.select(pl.col(\"protein_accession.version\").n_unique()).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8379821f",
    "metadata": {},
    "outputs": [],
@@ -150,6 +172,9 @@
     "        \"#tax_id\",\n",
     "        \"status\",\n",
     "        \"genomic_nucleotide_accession.version\",\n",
+    "        \"genomic_nucleotide_gi\",\n",
+    "        \"protein_gi\",\n",
+    "        \"protein_accession.version\",\n",
     "        \"start_position_on_the_genomic_accession\",\n",
     "        \"end_position_on_the_genomic_accession\",\n",
     "        \"orientation\",\n",
@@ -205,7 +230,7 @@
     "loop = tqdm(accession_list)\n",
     "try:\n",
     "    for acc in loop:\n",
-    "        fasta_path = Path(f\"../temp/data/external/sequences/{acc}.fasta\")\n",
+    "        fasta_path = Path(f\"../temp/data/external/sequences/nucleotides/{acc}.fasta\")\n",
     "        # Check if sequences already exists\n",
     "        if fasta_path.exists():\n",
     "            loop.set_description(f\"Skipping {acc}\")\n",
@@ -222,6 +247,84 @@
     "        fasta_path.unlink()\n",
     "    print(\"\\nDownload interrupted. Last file removed. You can rerun the cell to resume.\")\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fd78275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download protein sequences\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "from Bio import Entrez, SeqIO\n",
+    "import time\n",
+    "\n",
+    "protein_accession_list = non_amr.select(\"protein_accession.version\").unique().collect().to_series().to_list()\n",
+    "\n",
+    "\n",
+    "\n",
+    "output_dir = Path(\"../temp/data/external/sequences/proteins\")\n",
+    "\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\\\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "# Skip already downloaded files\n",
+    "existing_files = {f.stem for f in output_dir.glob(\"*.fasta\")}\n",
+    "\n",
+    "protein_accession_list = [acc for acc in protein_accession_list if acc not in existing_files]\n",
+    "\n",
+    "batch_size = 100\n",
+    "\n",
+    "for i in tqdm(range(0, len(protein_accession_list), batch_size)):\n",
+    "    batch = protein_accession_list[i : i + batch_size]\n",
+    "    \n",
+    "    # Skip if all files already exist\n",
+    "    if all((output_dir / f\"{acc}.fasta\").exists() for acc in batch):\n",
+    "        continue\n",
+    "\n",
+    "    try:\n",
+    "        # Fetch up to 20 sequences at once\n",
+    "        handle = Entrez.efetch(\n",
+    "            db=\"protein\",\n",
+    "            id=\",\".join(batch),\n",
+    "            rettype=\"fasta\",\n",
+    "            retmode=\"text\"\n",
+    "        )\n",
+    "        records = list(SeqIO.parse(handle, \"fasta\"))\n",
+    "        handle.close()\n",
+    "\n",
+    "        # Save each sequence into its own file\n",
+    "        for record in records:\n",
+    "            acc = record.id\n",
+    "            out_path = output_dir / f\"{acc}.fasta\"\n",
+    "            SeqIO.write(record, out_path, \"fasta\")\n",
+    "\n",
+    "        # Be polite to NCBI\n",
+    "        time.sleep(0.5)  # ~2.5 requests per second (safe)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"\\nError while processing batch {i//batch_size + 1}: {e}\")\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4252a427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check duplicate protein accessions\n",
+    "(\n",
+    "    non_amr.group_by(\"protein_accession.version\")\n",
+    "    .agg(pl.len().alias(\"count\"))\n",
+    "    .filter(pl.col(\"count\") > 1)\n",
+    "    .sort(\"count\", descending=True)\n",
+    ").collect()"
    ]
   },
   {
@@ -271,6 +374,9 @@
     "        \"genomic_nucleotide_accession.version\",\n",
     "        \"start_position_on_the_genomic_accession\",\n",
     "        \"end_position_on_the_genomic_accession\",\n",
+    "        \"genomic_nucleotide_gi\",\n",
+    "        \"protein_gi\",\n",
+    "        \"protein_accession.version\",\n",
     "        \"orientation\",\n",
     "        \"Symbol\",\n",
     "        \"non_amr\",\n",
@@ -293,6 +399,9 @@
     "        \"genomic_nucleotide_accession.version\",\n",
     "        \"start_position_on_the_genomic_accession\",\n",
     "        \"end_position_on_the_genomic_accession\",\n",
+    "        \"genomic_nucleotide_gi\",\n",
+    "        \"protein_gi\",\n",
+    "        \"protein_accession.version\",\n",
     "        \"orientation\",\n",
     "        \"Symbol\",\n",
     "        \"non_amr\",\n",
