Tidy notebooks: drop unused import and fix rename
Delete obsolete notebooks/index.ipynb

--- a/notebooks/06.extract_card.ipynb
+++ b/notebooks/06.extract_card.ipynb
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_one_hot.rename(\n",
+    "df_one_hot = df_one_hot.rename(\n",
     "    {col: col.removeprefix(\"drug_classes_\") for col in df_one_hot.columns}\n",
     ")"
    ]
